erase_file_location

--- a/oracle/20190312.md
+++ b/oracle/20190312.md
@@ -10,7 +10,7 @@
 link : redown.molit.go.kr
 
 위 링크에서 다음과 같이서울시 전체의 아파트 매매 1년치 정보를 csv파일로 받을 수 있었다.
-![view_csv](./img/view_csv.png)
+![view_csv](../img/view_csv.png)
 위 csv파일에 쓸모없는 주석이 있어 notepad++로 삭제 하고 나서야 최종적으로 Oracle DB에 임포트 할 수 있었다.
 
 임포트를 하게 되면 다음과 같이 자동으로 비슷한 형태의 변수형과 크기를 지정해준다.
