--- a/oracle/20190313.md
+++ b/oracle/20190313.md
@@ -90,7 +90,14 @@ Natrual join은 칼럼의 이름이 동일하면 모두 조인이 된다. 이를
 
 
 
-내가 잘못 이해한 부분은 다시 커밋하겠다.
+## 회고록
+내가 문제 2번과 3번에 겪었던 문제에 대해 서술하겠다. 
+먼저 모임이 있지만, 아무도 참석을 하지 않는 경우가 있다. 그러하므로 관계는
+**mt.meet_no>his.meet_no**의 관계를 가진다. 그러므로 조인의 형식은
+mt.meet_no = his.meet_no(+)가 된다.
 
+meeting 테이블에 대해 조인을 거치게 되면 history테이블에는 많은 null값이 생길 것이다. 조인된 테이블에 다시 address테이블을 조인 시키는데 이 때, 전에 서술한 mt.meet_no = his.meet_no(+)의 관계로 인해 null값을 가진 행이 많이 생겨날 것이다. 이 행들에 대해 address테이블도 null값을 생성하기 때문에 관계는
+his.meet_no = ad.no(+)가 적용된다.
 
+성윤이형이 알려주신 꿀팁 : history 테이블은 meeting테이블에 종속적이고, history테이블은 address테이블에 종속적이므로 address테이블은 meeting테이블에 종속적으로 이미 조인 된 상태라고 말씀하셨다. 그래서 (+)기호를 쓰지 않아도 작동을 하였다.
   
