--- a/oracle/20190315_20190318.md
+++ b/oracle/20190315_20190318.md
@@ -70,7 +70,7 @@
     ![4-1](../img/20190315_20190318/4-1.JPG)
 
     여기서 부서가 없는 국가를 구해야하는데 나라 이름이 null인 부분을 구했다. 
-	 ![4-2](../img/20190315_20190318/4-2.JPG)
+    ![4-2](../img/20190315_20190318/4-2.JPG)
 
    원래 문제에서 요구하던 것을 반영하여 내 첫 답안을 수정하면,
     ![4-3](../img/20190315_20190318/4-3.JPG)
@@ -104,5 +104,5 @@
   단순히 테이블 두개를 두고 고용날짜와 월급을 비교하여 출력하면 끝이었다.
    ![6-1](../img/20190315_20190318/6-1.JPG)
 
- 이를 조이ㄴ말고 서브쿼리로도 한번 풀어보았다.
+  이를 조인말고 서브쿼리로도 한번 풀어보았다.
   ![6-2](../img/20190315_20190318/6-2.JPG)
