--- a/oracle/20190315_20190318.md
+++ b/oracle/20190315_20190318.md
@@ -60,7 +60,7 @@
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
 
  - 강사님 풀이 해석
-    도시의 직원 수가 6 미만인 도시를 하나의 select문에 구현하셨다. 그런데 불필요한 컬럼이 많기 때문에 나보다 실행시간이 길었다.
+    도시의 직원 수가 6 미만인 도시를 하나의 select문에 구현하셨다. 불필요한 컬럼이 많기 때문에 나보다 실행시간이 길었다.
     ![3-5](../img/20190315_20190318/3-5.JPG)                                                       
 
 ## 문제 4. 부서가 없는 국가의 id와 이름을 출력하시오. 국가 이름 기준 오름차순으로 출력하세요.
