--- a/infra/20190418/20190418.md
+++ b/infra/20190418/20190418.md
@@ -154,12 +154,11 @@ RAID를 이용한 응용 문제 풀이
 다음 시스템의 차이점을 설명하시오.
 
 - CASE 1
-![Q1](./../../img/Infra/RAID/Q1.JPG)  
+![Q1](./../../img/Infra/RAID/Q1.png)  
 #
 
 - CASE 2
-![Q2](./../../img/Infra/RAID/Q2.JPG)  
-#  
+![Q2](./../../img/Infra/RAID/Q2.png)  
 #
 
 
