--- a/infra/20190418/20190418.md
+++ b/infra/20190418/20190418.md
@@ -1,7 +1,7 @@
 # Infra 20190418
 
-Thanks to YIJONGYUN(https://github.com/YIJONGYUN) and JuHyeonLee
-..
+Thanks to [JongYunYi](https://github.com/YIJONGYUN) and JuHyeonLee
+#
 전체적인 용어 정리
 
 1. 가상화된 시스템의 구성요소
@@ -11,13 +11,13 @@ Thanks to YIJONGYUN(https://github.com/YIJONGYUN) and JuHyeonLee
 - OS
 - 미들웨어(서버관점), 어플리케이션(사용자관점)
 - 서비스
-..
+#
 
 2. 하이퍼바이저
 - 가상화 할때, 하드웨어에 바로 os가 설치되는 것이 아닌 하이퍼바이저가 설치된다. 
 - 주된 역할은 가상화된 어플리케이션에 접속 할 수 있게 한다.
  Ex) Hyper-v, VMware, Nutanix ...  
-..
+#
 
 
 3. Cloud 종류
@@ -31,7 +31,7 @@ ex) AWS, MS, Google, IBM, Oracle ...
 - PaaS (Platform as a Service)
 소프트웨어 서비스를 개발할 대 필요한 플랫폼을 제공하는 서비스
 ex) 구글 앱엔진, 세일즈포스닷컴 ...  
-..
+#
 
  
  4. 가상화 형태의 종류
