--- a/infra/20190418/20190418.md
+++ b/infra/20190418/20190418.md
@@ -6,7 +6,7 @@ Thanks to [JongYunYi](https://github.com/YIJONGYUN) and JuHyeonLee
 
 1. 가상화된 시스템의 구성요소
 - CPU
-- Mepory
+- Memory
 - 하드디스크
 - OS
 - 미들웨어(서버관점), 어플리케이션(사용자관점)
