--- a/infra/20190418/20190418.md
+++ b/infra/20190418/20190418.md
@@ -35,10 +35,10 @@ ex) 구글 앱엔진, 세일즈포스닷컴 ...
 
  
  4. 가상화 형태의 종류
-p2v : physical to virtual
-v2v : virvual to virtual
-v2c : virtual to cloud
-p2c : physial to cloud  
+- p2v : physical to virtual
+- v2v : virtual to virtual
+- v2c : virtual to cloud
+- p2c : physial to cloud  
 #
 
 	
