--- a/infra/20190418/20190418.md
+++ b/infra/20190418/20190418.md
@@ -65,7 +65,7 @@ ex) 구글 앱엔진, 세일즈포스닷컴 ...
 #
 
 7. Hyper Converged Intrastructure
-- 컴퓨팅, 스토리지, 네트워킹을 단일 시스템으로 결합할 수 있다. (단일투로하)
+- 컴퓨팅, 스토리지, 네트워킹을 단일 시스템으로 결합할 수 있다.
 - 어플리케이션과 연계된 정책을 기반으로 추상화하고 풀링한 다음, 동적으로 할당한다.
 - 모든 데이터 센터 기능은 하드웨어 대신 소프트웨어 계층에서 실행된다.
 - 하나의 장비에서 처리하던 일을 여러 장비에 나눠서 처리할 수 있도록 설계되어있음. (Scale out형 확장)  
